fix: поправить версии pom; поправить методы