@@ -1,24 +1,22 @@
 package ru.practicum.ewm.service;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import ru.practicum.ewm.converter.UserConverter;
 import ru.practicum.ewm.dto.UserDto;
+import ru.practicum.ewm.entity.User;
 import ru.practicum.ewm.repository.UserRepository;
 import ru.practicum.ewm.util.PageHelper;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
+@RequiredArgsConstructor
 public class UserService {
 
     private final UserRepository userRepository;
-
-    @Autowired
-    public UserService(UserRepository userRepository) {
-        this.userRepository = userRepository;
-    }
 
     public UserDto addUser(UserDto userDto) {
         var created = UserConverter.convertToModel(userDto);
@@ -28,13 +26,11 @@ public class UserService {
 
     public List<UserDto> getUsers(List<Long> ids, int from, int size) {
         PageRequest pageRequest = PageHelper.createRequest(from, size);
-        if (ids != null) {
-            var result = userRepository.findAllByIdIn(ids, pageRequest).getContent();
-            return result.size() == 0 ? List.of() : UserConverter.mapToDto(result);
-        }
+        List<User> result = ids != null
+                ? userRepository.findAllByIdIn(ids, pageRequest).getContent()
+                : userRepository.findAll(pageRequest).getContent();
 
-        var result = userRepository.findAll(pageRequest).getContent();
-        return result.size() == 0 ? List.of() : UserConverter.mapToDto(result);
+        return result.size() == 0 ? Collections.emptyList() : UserConverter.mapToDto(result);
     }
 
     public void deleteUser(Long userId) {
